--- a/officers.html
+++ b/officers.html
@@ -75,7 +75,7 @@
                 <div class="card-body">
                   <h5><b>Cindy Qian</b></h5>
                   <h6>Vice President of Operations</h6>
-                  <p class="card-text">Hello! I'm Cindy your 2019-2020 Vice President of Operations and Treasurer! I also do graphic design and am a part of the badminton team. Feel free to reach out if you havey questions or just want to chat I'd love to get to know you :))</p>
+                  <p class="card-text">Hello! I'm Cindy your 2019-2020 Vice President of Operations and Treasurer! I also do graphic design and am a part of the badminton team. Feel free to reach out if you have any questions or just want to chat I'd love to get to know you :))</p>
 					<br>
 					<p><i>"It's easy to be kind."</i></p>
                   <div class="d-flex justify-content-between align-items-center">
