--- a/officers.html
+++ b/officers.html
@@ -184,7 +184,7 @@
                 <div class="card-body">
                   <h5><b>Venugopal Chillal</b></h5>
                   <h6>Ex-Officio</h6>
-                  <p class="card-text">Hey everyone! My name is Venu and I'm an Ex-Officio and State President this year! My job is to help lead California FBLA. If you guys have questions, feel free to message me!</p>
+                  <p class="card-text">Hey everyone! My name is Venu and I'm an Ex-Officio and State President this year! If you guys have questions, feel free to message me!</p>
 					<br>
 					<p><i>"Cupertino FBLA has changed my life."</i></p>
                   <div class="d-flex justify-content-between align-items-center">
