--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="card-body">
                   <h5><b>Bay Section Leadership Conference</b></h5>
 					<h6>Feb 8</h6>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"> Conference hosting FBLA contestants from across the Bay Area. Competitors can qualify for the State Leadership Conference in April.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href = 'https://www.cafbla.org/domain/70';">Learn about BSLC</button>
@@ -89,7 +89,7 @@
                 <div class="card-body">
                   <h5><b>State Leadership Conference</b></h5>
 					<h6>Apr 23-26</h6>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Conference hosting FBLA contestants from across California. Competitors can qualify for the National Leadership Conference in July.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href = 'https://www.cafbla.org/domain/34';">Learn about SLC</button>
