--- a/index.html
+++ b/index.html
@@ -11,8 +11,35 @@
     <meta name="author" content="Varun Shenoy">
     <link rel="shortcut icon" href="images/favicon.png" />
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	  //start
+	  <style type="text/css" media="screen">
+     div#banner { 
+       position: absolute; 
+       top: 0; 
+       left: 0; 
+		 bottom: 10;
+       background-color: #B22222; 
+       width: 100%; 
+     }
+     div#banner-content { 
+       width: 800px; 
+       margin: 0 auto; 
+       padding: 10px; 
+	   color: lightgrey
+     }
+    </style>
+	  //end
   </head>
   <body>
+	  //start
+	  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow" style="z-index: 100" id="banner-content">
+	  <div id="banner">
+    		<div id="banner-content">
+				<center>All CHS FBLA Meetings and Study Sessions are cancelled until further notice due to concerns with COVID19</center>
+    		</div>
+  		</div>
+	  </div>
+	  //end
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow" style="z-index: 100">
       <div class="header-icon"><img src="images/tinofbla.png" title="" style="width: 100%"></div>
       <h5 class="my-0 mr-md-auto font-weight-normal" style="padding: 10px;">cupertino <b>fbla</b></h5>
