--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        width: 100%; 
      }
      div#banner-content { 
-       width: 800px; 
+       width: 100%; 
        margin: 0 auto; 
        padding: 10px; 
 	   color: lightgrey
