--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
 
             </div>
         </div>
-        <!--/.Slides-->
-        <!--Controls-->
         <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -87,9 +85,8 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-        <!--/.Controls-->
     </div>
-    <!--/.Carousel Wrapper-->
+<!--/.Carousel Wrapper-->
     <div class="album py-5 bg-light box-shadow">
         <div class="text-center"><h3><b>Announcements</b></h3>
         <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 15px;">the latest news and upcoming events</p>
@@ -110,6 +107,7 @@
                 </div>
               </div>
             </div>
+<!--/.Announcements-->
             <div class="col-lg-6 col-md-6">
               <div class="card mb-4 box-shadow">
                 <div class="card-body">
@@ -135,7 +133,7 @@
         </div></center>
       </div>
       <br>
-     
+<!--/.Bottom Footer-->  
       <footer class="text-muted">
       <div class="container">
         <p class="float-right">
