--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cupertino FBLA is the largest professional interest club at Cupertino High School.">
     <meta name="keywords" content="Cupertino FBLA, Tino FBLA, Cupertino High School">
-    <meta name="author" content="Varun Shenoy">
+    <meta name="author" content="Vishal Shenoy">
     <link rel="shortcut icon" href="images/favicon.png" />
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	  //start
