--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Cupertino FBLA is the largest professional interest club at Cupertino High School.">
     <meta name="keywords" content="Cupertino FBLA, Tino FBLA, Cupertino High School">
     <meta name="author" content="Vishal Shenoy">
+	//fbla website 1.0 was built by Varun Shenoy, fbla website 2.0 was built by Vishal Shenoy
     <link rel="shortcut icon" href="images/favicon.png" />
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	  //start
